--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.justnow.androidsummarize">
-
+    <!-- 访问WIFI的权限 -->
     <application
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
@@ -17,7 +18,16 @@
             </intent-filter>
         </activity>
         <activity android:name=".fragment.FragmentPageActivity" />
-        <activity android:name=".fragment.axdefault.AxFragmentActivity"></activity>
+        <activity android:name=".fragment.axdefault.AxFragmentActivity" />
+        <activity android:name=".fragment.navigation.NavigationFragmentActivity" />
     </application>
+
+    <!-- 访问手机状态 -->
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission
+        android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
+        tools:ignore="ProtectedPermissions" />
+
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
 
 </manifest>
