--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.justnow.androidsummarize">
-    <!-- 手机状态 -->
+
     <application
         android:allowBackup="false"
-        android:networkSecurityConfig="@xml/network_security_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".okhttp.OkHttpActivity"></activity>
+        <activity android:name=".multithreadhelper.MultiThreadHelperActivity"></activity>
+        <activity android:name=".okhttp.OkHttpActivity" />
         <activity android:name=".event.EventDispatchTestActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -23,15 +24,15 @@
         <activity android:name=".fragment.FragmentPageActivity" />
         <activity android:name=".fragment.axdefault.AxFragmentActivity" />
         <activity android:name=".fragment.navigation.NavigationFragmentActivity" />
-    </application>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" /> <!-- Wifi 信息 -->
+    </application> <!-- Wifi 信息 -->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 网络 -->
     <uses-permission android:name="android.permission.INTERNET" /> <!-- 文件读写 -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission
         android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 </manifest>
